--- a/DiceRollGame/DiceRollGame.csproj
+++ b/DiceRollGame/DiceRollGame.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Game\" />
+    <Folder Include="UserCommunication\" />
+  </ItemGroup>
+
 </Project>
